2012-08-31 John Wu <John dot Wu at ACM dot org>
	* src/icmoins.cpp: in function convert, remove leftover statements
	that assigns bits to nil pointers
	* src/fileManager.h, src/fileManager.cpp: comment out all
	statements related to rwlock in an attempt to simplify the logic
	about access control (to address the deadlock problem reported by
	Petr Velan)
	* src/ixpack.cpp, src/ixfuge.cpp: change test of (nobs <= 1) in
	the function write to be (nobs <= 0) to allow indexes with a
	single bitmap
	* src/parth*.cpp: retrieve null masks before counting the values
	(a problem reported by Andrew Olson)
	* src/qExpr.cpp: add one more variant of
	ibis::math::barrel::recordVariable to work with qExpr
	* src/whereClause.h, src/whereClause.cpp, src/query.cpp: add
	function whereClause::getNullMask, add call to
	whereClause::getNullMask in query::computeHits to address an issue
	reported by Michael Beauregard
	* src/part.h: make ibis::part::getNullMask consistent with other
	getNullMask functions, add part::getMaskRef to return a reference

2012-08-30 John Wu <John dot Wu at ACM dot org>
	* src/ifade.cpp, src/isbiad.cpp, src/isapid.cpp: clean up
	conversion operations to match the changed semantics of
	ibis::array_t<T>::push_back (problems revealed with 'make
	large-tests')

2012-08-29 Michael Beauregard <michael at insightfulminds dot com>
	* src/bord.cpp:11380 add case for converting a float to double

2012-08-29 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.cpp: clean up in-line documentation while
	examining a report of deadlock from Petr Velan
	* src/index.cpp: when use requested bit-sliced index, use
	ibis::skive if the data type is not integer or the minimum is less
	than 0 (address problem encountered with make full-check)
	* src/bord.cpp, src/category.cpp: add missing versions of
	stringSearch and keywordSearch in ibis::bord::column and
	ibis::text
	* src/bordm.cpp: move all functions related to bord::merge into